<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context="com.pazeto.comercio.ui.EditClientActivity" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/client_supplier"
                    android:layout_marginBottom="20dp"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <EditText
                    android:id="@+id/etClientName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:layout_marginBottom="10dp"
                    android:inputType="textPersonName|textCapWords" />

                <EditText
                    android:id="@+id/etClientLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/last_name"
                    android:inputType="textPersonName|textCapWords"
                    android:layout_marginBottom="10dp"/>

                <EditText
                    android:id="@+id/etClientTel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/telephone"
                    android:inputType="phone"
                    android:layout_marginBottom="10dp"/>

                <EditText
                    android:id="@+id/etClientCellphone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cellphone"
                    android:inputType="phone"
                    android:layout_marginBottom="10dp"/>

                <EditText
                    android:id="@+id/etClientEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:layout_marginBottom="10dp"/>

                <EditText
                    android:id="@+id/etClientCity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/city"
                    android:inputType="textCapWords"
                    android:layout_marginBottom="10dp"/>

                <EditText
                    android:id="@+id/etClientAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="2"
                    android:hint="@string/address"
                    android:layout_marginBottom="10dp"/>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:clickable="true"
        app:backgroundTint="@color/float_btn_background_color"
        app:maxImageSize="@dimen/float_btn_image_size"
        android:layout_margin="@dimen/float_button_margin"
        app:srcCompat="@android:drawable/ic_menu_save" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>