<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cdl_report"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/OutputClient"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableLeft="@mipmap/ic_client"
                    android:onClick="selectClientClick"
                    android:layout_gravity="center"
                    android:gravity="center|left"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:hint="@string/client" />

                <Spinner
                    android:id="@+id/tv_item_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:drawableLeft="@mipmap/ic_report"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/edt_initial_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:drawableLeft="@mipmap/ic_calendar"
                    android:hint="@string/date_hint" />

                <TextView
                    android:id="@+id/edt_final_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:drawableLeft="@mipmap/ic_calendar"
                    android:hint="@string/date_hint" />

            </LinearLayout>
        </LinearLayout>

        <ListView
            android:id="@+id/sale_list_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/report_sale_list_item"/>
        <TextView
            android:id="@+id/tv_empty"
            android:layout_marginTop="@dimen/activity_form_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:gravity="center"
            android:text="@string/without_items" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_generate_report"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:onClick="onGenerateReport"
        android:src="@mipmap/ic_report"
        android:backgroundTint="@color/float_btn_background_color"
        android:layout_margin="@dimen/activity_form_padding"
        />

</androidx.coordinatorlayout.widget.CoordinatorLayout>